# playgroundtools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  publish.yml  test.yml
playground/: __init__.py  __main__.py  cli.py  commands.py  exceptions.py  metadata.py  playground.py  resources.py  util.py
playgroundtools/: __init__.py  cli.py  commands.py  config.json  exceptions.py  gui.py  metadata.py  playground.py  resources.py  util.py
playgroundtools/views/: about.py  delete.py  dialog.py  directory.py  file.py  main.py  new.py
tests/: fixtures.py  test_commands.py  test_metadata.py  test_playground.py  test_util.py
