[metadata]
name = playgroundtools
author = saibalusulapalem
author_email = sai.balusulapalem@gmail.com
version = 1.0.1
description = A command-line interface for managing playground projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saibalusulapalem/playgroundtools
project_urls = 
    Bug Tracker = https://github.com/saibalusulapalem/playgroundtools/issues
license = MIT License
license_files = LICENSE
classifiers = 
    Intended Audience :: End Users/Desktop
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = sandbox, project, files

[options]
packages = find:
include_package_data = True

[options.extras_require]
test = 
    pytest
    flake8
dev = 
    black
    isort

[options.entry_points]
console_scripts = 
    playground = playgroundtools.cli:main

[flake8]
max-line-length = 79
